# src

PoissonSurface/: Geometry.h  MultiGridOctreeData.h  Ply.h  PoissonSurface.vcproj  PoissonSurface.vcxproj  ReadMe.txt  SurfaceTrimmer.cpp  multigridoctreedata.inl
app/: config.ini
pointCloudToPrimitive/: ConePrimitiveShape.cpp  ConePrimitiveShape.h  CylinderPrimitiveShape.cpp  CylinderPrimitiveShape.h  LevMarFitting.h  Plane.h  PlanePrimitiveShape.cpp  PlanePrimitiveShape.h  PrimitiveShape.h  PrimitiveShapes.sln  PrimitiveShapes.vcproj  PrimitiveShapes.vcxproj  RansacShapeDetector.cpp  SpherePrimitiveShape.cpp  SpherePrimitiveShape.h  TorusPrimitiveShape.cpp  TorusPrimitiveShape.h
sehoon/: ANNHelper.h  Colors.h  Constants.h  DynamicXMLParser.h  ExprParser.h  FileManip.h  GLEigen.h  GLObjects.h  Math.h  Misc.h  Moreeigen.h  Nick01a.h  Poses.h  ReadMe.txt  Time.h  (+2 more)
utility/: 2dch.cpp  2dch.h  Archive.cpp  BlockSparseMatrix.cpp  BlockSparseMatrix.h  CMakeLists.txt  CSRMatrix.cpp  CSRMatrix.h  Cone.cpp  Cone.h  ConfigManager.cpp  ConfigManager.h  ConicSolver.cpp  ConicSolver.h  ConvexHull2D.cpp  ConvexHull2D.h  ConvexPolygon.cpp  ConvexPolygon.h  CubicSpline.cpp  CubicSpline.h  DecoLogger.cpp  DecoLogger.h  DiagonalBlockSparseMatrix.cpp  DiagonalBlockSparseMatrix.h  EigenHelper.cpp  EigenHelper.h  EigenSerializer.cpp  EigenSerializer.h  JieBlas.cpp  JieBlas.h  LCCQPGraph.cpp  LCCQPGraph.h  LCCQPGraphNode.cpp  LCCQPGraphNode.h  LCCQPSolver.cpp  LCCQPSolver.h  LinearComplementarityConstraint.cpp  LinearComplementarityConstraint.h  LinearConstraint.cpp  LinearConstraint.h  (+46 more)
(+68 files in other folders)
